# prj-bazel-v1

./: README.md
basics/rules/: BUILD.bazel  atai_rules.bzl
